kompose/event-ui-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml -o kompose
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: event-ui
  name: event-ui
spec:
  ports:
    - name: "http"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: event-ui
